# mcp-devhatchery

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.example.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: back-merge.yml  build-artifacts.yml  cc-suggest.yml  ci.yml  promotion-guard.yml  release-please.yml  release-pr-automerge.yml  semantic-pr-title.yml  semantic-release.yml
decision-log/: ADR-0001-transport-and-runtime.md  ADR-0002-storage-and-exports.md  ADR-0003-auth-ladder.md
docs/: RELEASE_TRIGGER.md  index.md
docs/api/: events.md  overview.md
docs/api/tools/: README.md  containers.md  continue-and-list.md  exports-and-mounts.md  exports.md  filesystem.md  mounts.md  resources.md  shell-and-fs.md  shell.md  snapshots.md  volumes.md
docs/clients/: connect.md
docs/design/: DECISIONS.md  ENGINEERING_CONTRACT.md  architecture.md  requirements.md
docs/design/milestones/: M1.md  M2.md
docs/kb/: conventional_commits.md  index.md  oidc-authelia.md  releasing.md  warm-pool.md
docs/operators/: apt-cache.md  config.md  exports.md  release_flow.md  security.md  setup.md  warm_pool.md
docs/plan/: high_level_plan.md
src/mcp_devhatchery/: __init__.py  auth.py  config.py  continue_tools.py  docker_backend.py  events.py  exports.py  main.py  mount_broker.py  prepull.py  server.py  snapshots.py  tools.py  warm_pool.py
tests/: test_auth_and_prepull.py  test_continue_tools.py  test_docker_backend.py  test_events.py  test_events_sse.py  test_exports.py  test_mount_broker.py  test_shell_exec_runner.py  test_shell_exec_stub.py  test_tools_fs.py  test_warm_pool_and_snapshots.py
